TAG: radardbutilities-tr9451-3
DATE: 03/05/2009
STAFF: sc
CHANGES:
1) logFileToProcess.py
   a) added these two lines
     bName = os.path.basename(workFile)
     filePath = os.path.join(outputDir, bName)
2) logFileToProcessByDir.csh - fixed a couple bugs
   a) foreach file (${LOGWORKDIR}) changed to foreach file (${LOGWORKDIR}/*) 
   b) call logFileToProcess.py instead of logFilesToProcess.py (typo)

TAG: radardbutilities-tr9451-2
TAG: radardbutilities-tr9451-1
DATE: 02/10/2009
STAFF: lec
CHANGES:
1) TR9451; removing and changing log names
   changed:logFileToProcess.sh
   changed:logFileToProcess.py
   new:    logFileToProcessByDir.sh
   remove: logPreMirroredFiles.sh
   remove: logPreMirroredFiles.py
   remove: logPreMirroredFilesByFile.sh
   remove: logPreMirroredFilesByFile.py

TAG: radardbutilities-tr9451-BP
DATE: 02/10/2009
STAFF: lec
CHANGES:
1) branch point tag for TR9451

TAG: radardbutilities-4-2-0-1
DATE: 02/04/2009
STAFF: lec
CHANGES:
1) TR9451; Gene Traps; getFilesToProcess2, logPreMirroredFilesByFile

TAG: radardbutilities-4-1-3-1
DATE: 11/11/2008
STAFF: lec
CHANGES:
1) merged TR9050 branch to the trunk

TAG: radardbutilities-tr9050-4
TAG: radardbutilities-tr9050-3
TAG: radardbutilities-tr9050-2
TAG: radardbutilities-tr9050-1
DATE: 11/04/2008
STAFF: lec
CHANGES:
1) TR9050

TAG: radardbutilities-tr9050-BP
DATE: 10/29/2008
STAFF: lec
CHANGES:
1) branch point tag for TR9050

TAG: radardbutilities-4-1-0-1
DATE: 06/12/2008
STAFF: dbm
CHANGES:
1) Modified logFileToProcess.py and logMirroredFiles.py to use the maximum
   int value allowed by sybase if the fileSize is greater than that

TAG: radardbutilities-3-5-4-1
DATE: 11/06/2007
STAFF: sc
CHANGES:
1) added logFileToProcess.csh and logFileToProcess.py

TAG: radardbutilities-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES:
1) build 36; merge

TAG: radardbutilities-build36-1
DATE: 07/27/2006
STAFF: lec
CHANGES:
1) build 36

TAG: radardbutilities-build36-BP
DATE: 07/13/2006
STAFF: lec
CHANGES: