@@ -1,3 +1,10 @@
+TAG: radardbutilities-tr9451-4
+DATE: 03/06/2009
+STAFF: sc
+CHANGES:
+1) logFileToProcess.py removed the sql and print of files logged on current date
+   and added printing of only the file logged
+
 TAG: radardbutilities-tr9451-3
 DATE: 03/05/2009
 STAFF: sc
